objects/ServiceTerritoryMember.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FINS_Q_Branch_Demo_Reference__c</fullName>
        <label>Q-Branch Demo Reference</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FINS_Q_Branch_Demo_Guide</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSLDemoTools_Original_Geolocation__c</fullName>
        <label>FSLDemoTools Original Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>FSL_Mobile_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FSL Mobile Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Internal_SLR_HomeAddress_Geolocation__c</fullName>
        <label>Internal SLR HomeAddress Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>SDO_SFS_Capacity_Based_Resource__c</fullName>
        <formula>ServiceResource.IsCapacityBased</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Capacity Based Resource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDO_SFS_Non_Capacity_Based_Resource__c</fullName>
        <formula>NOT(SDO_SFS_Capacity_Based_Resource__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non Capacity Based Resource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDO_Tool_FSLDemoTools_Master_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FSLDemoTools Master Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Resource_Name__c</fullName>
        <formula>ServiceResource.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Resource Name</label>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>FSLDemoTools_Fields</fullName>
        <active>false</active>
        <errorConditionFormula>SDO_Tool_FSLDemoTools_Master_Data__c</errorConditionFormula>
        <errorMessage>Can&apos;t edit the FSLDemoTools Master data</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Limit_STM_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT(ISBLANK(EffectiveEndDate)),
                                EffectiveEndDate &gt; ADDMONTHS(NOW(),36) )</errorConditionFormula>
        <errorMessage>End Date must be within 3 years from today</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Secondary_STM</fullName>
        <active>true</active>
        <errorConditionFormula>(ISPICKVAL(TerritoryType, &quot;Secondary&quot;) &amp;&amp; 
    ( ( ( ISCHANGED(Longitude) || ISCHANGED(Latitude) ) &amp;&amp; ( (NOT(ISBLANK(Longitude))) || (NOT(ISBLANK(Latitude))) )) || 
      (NOT(ISBLANK(FSL__Internal_SLR_HomeAddress_Geolocation__Latitude__s))) || 
      (NOT(ISBLANK(FSL__Internal_SLR_HomeAddress_Geolocation__Longitude__s))) || 
      (NOT(ISBLANK( Street ))) || 
      (NOT(ISBLANK( City ))) ||
      (NOT(ISBLANK( Country ))) ||
      (NOT(ISBLANK( State ))) || 
      (NOT(ISBLANK(  PostalCode  )))
    )
 )</errorConditionFormula>
        <errorMessage>Cannot save Service Territory Member of type secondary with Operating Hours or Address</errorMessage>
    </validationRules>
</CustomObject>